added banglalink processing

--- a/src/web/node-frag.html
+++ b/src/web/node-frag.html
@@ -17,7 +17,7 @@
              data-height="100%"></div>
     </div>
 </div>
-<div data-netdata="system.cpu" data-host="http://{hostname}:19999"
+<div data-netdata="ipv4.tcperrors" data-host="http://{hostname}:19999"
      data-chart-library="dygraph" data-dygraph-theme="sparkline" data-width="90%" data-height="40px" data-after="-300"
      data-points="300" data-colors="#FF5555"></div>
 <!-- END: node {hostname} -->
